--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,13 @@
 /build/
 /assets/
 /dist/
+/shared/
 
 buildapp.sh
 app_icon_icns
 Interface.py
 training.py
-experiment3d.py
-experiment2d.py
+analysis.py
 
 3D-iMDS.spec
 3D inverse MDS.spec
